[project]
name = "abm-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "axelrod>=4.13.1",
    "ipynb>=0.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mesa>=3.2.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "salib>=1.5.1",
    "statsmodels>=0.14.4",
]
